kyverno-networkpolicy-training/code/kyverno-ops/tag13/tests/no-world-egress/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaceSelector:
- name: tenant-a
  labels: {tenant: a}
- name: shop
  labels: {team: shop}
